// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpDrawer snapshots tests renders menu 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-anchorRight MuiDrawer-modal MuiModal-root css-nqx55b-MuiModal-root-MuiDrawer-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      aria-modal="true"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorRight css-y7ab46-MuiPaper-root-MuiDrawer-paper"
      role="dialog"
      style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);"
      tabindex="-1"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-5 css-899c3r-MuiGridLegacy-root"
        id="help-drawer"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h6 css-1ozjd4k-MuiTypography-root"
            data-testid="help-drawer-title"
            id="help-drawer-title"
          >
            HelpDrawer Title
          </h3>
          <span
            class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            data-testid="help-drawer-message"
            id="help-drawer-text-HelpDrawerTitle"
          >
            Integer mattis rutrum velit nec posuere. Quisque rhoncus quam elit.
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          id="help-drawer-button"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-kyjpvp-MuiButtonBase-root-MuiButton-root"
            data-analyticsid="help-drawer-close"
            data-testid="help-drawer-close"
            tabindex="0"
            type="button"
          >
            Close
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`HelpDrawer snapshots tests renders no menu 1`] = `
<body>
  <div />
</body>
`;

exports[`HelpDrawer snapshots tests renders text as react children 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-anchorRight MuiDrawer-modal MuiModal-root css-nqx55b-MuiModal-root-MuiDrawer-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      aria-modal="true"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorRight css-y7ab46-MuiPaper-root-MuiDrawer-paper"
      role="dialog"
      style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);"
      tabindex="-1"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-5 css-899c3r-MuiGridLegacy-root"
        id="help-drawer"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h6 css-1ozjd4k-MuiTypography-root"
            data-testid="help-drawer-title"
            id="help-drawer-title"
          >
            HelpDrawer title
          </h3>
          <span
            class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            data-testid="help-drawer-message"
            id="help-drawer-text-HelpDrawertitle"
          >
            <span>
              Test text
            </span>
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          id="help-drawer-button"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-kyjpvp-MuiButtonBase-root-MuiButton-root"
            data-analyticsid="help-drawer-close"
            data-testid="help-drawer-close"
            tabindex="0"
            type="button"
          >
            Test OK
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`HelpDrawer snapshots tests renders text as react element 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-anchorRight MuiDrawer-modal MuiModal-root css-nqx55b-MuiModal-root-MuiDrawer-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-4nmryk-MuiBackdrop-root-MuiModal-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      aria-modal="true"
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation16 MuiDrawer-paper MuiDrawer-paperAnchorRight css-y7ab46-MuiPaper-root-MuiDrawer-paper"
      role="dialog"
      style="--Paper-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);"
      tabindex="-1"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-5 css-899c3r-MuiGridLegacy-root"
        id="help-drawer"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
        >
          <h3
            class="MuiTypography-root MuiTypography-h6 css-1ozjd4k-MuiTypography-root"
            data-testid="help-drawer-title"
            id="help-drawer-title"
          >
            HelpDrawer title
          </h3>
          <span
            class="MuiTypography-root MuiTypography-body2 css-kp6n3s-MuiTypography-root"
            data-testid="help-drawer-message"
            id="help-drawer-text-HelpDrawertitle"
          >
            Test text
          </span>
        </div>
        <div
          class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          id="help-drawer-button"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-kyjpvp-MuiButtonBase-root-MuiButton-root"
            data-analyticsid="help-drawer-close"
            data-testid="help-drawer-close"
            tabindex="0"
            type="button"
          >
            Test OK
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
